# openscad

./: .gitignore  .markdownlint.json  CMakeLists.txt  COMMIT_MESSAGE.txt  DOCUMENTATION_INDEX.md  HANDOFF.md  INTEGRATION_COMPLETE.md  PR_SUMMARY_FOR_COMMIT.md  WWWIDGETS_BUILD_CHECKLIST.md  WWWIDGETS_INTEGRATION_SUMMARY.md
design-docs-jeff/: filefuncs-extn-design.txt  string-extn-design.txt
doc/WikiBooks/: wikibooks-new-functions.txt
doc/color-scheme-prefs/: 2025-12-14-preferences-behavior.md  COMMENT_PARSER_OVERVIEW.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_MERGE_COMPLETE.txt  HANDOFF.md  INTEGRATION_COMPLETE.md  PARAMETER_HEX_SPINBOX.md  PARAMETER_WIDGETS_LIBRARY_ARCHITECTURE.md  PREFERENCES_IMPLEMENTATION_STATUS.md  PR_SUMMARY_FOR_COMMIT.md  RENDERING_ARCHITECTURE.md  WORK_SUMMARY_FINAL.txt  WWWIDGETS_BUILD_CHECKLIST.md  WWWIDGETS_INTEGRATION_SUMMARY.md  design-intent-to-9-12-2025.md
doc/resource-inventory/: cmake-changes-json-update.md  readjson-design-and-implementation.md  statement-of-intent.md
examples/Old/: README.md  example-index-data.json  example-index.scad  example001-sphere-w-holes.scad  example002-cone-with-holes.scad  example004.scad  example005.scad  example006.scad  example007.scad  example008.scad  example009.scad  example010.scad  example011.scad  example012.scad  example013.scad  example014.scad  example015.scad  example016.scad  example017.scad  example018.scad  example019.scad  example020.scad  example021.scad  example022.scad  example023.scad  example024.scad
examples/devSnap2025/: demo-math-functions.scad  demo-parsing-functions.scad  demo-string-functions.scad
scripts/: prefsPreview.scad
shaders/: ViewEdges.frag  ViewEdges.vert
src/core/: Builtins.cc  Settings.cc  Settings.h  (+8 more)
src/ext/wwwidgets/: CMakeLists.txt  VERSION.txt
templates/: CC0.json  color.json  color_hex.json  color_hex_a.json  color_name.json  color_name_a.json  color_vec4.json  custom_list_numbers.json  custom_list_strings.json  custom_vector.json  difference.json  echo.json  echo_e.json  echo_str.json  for.json  function.json  function_check.json  if-braces.json  if-then-else.json  if-then.json  module.json  new_object.json  new_object_vector.json  rotate.json  translate.json  translate_cube.json  translate_sphere.json  union.json
(+63 files in other folders)
